ircv3_parse_derive/tests/ui/de/fail/empty_attribute_value.stderr
error: `tag` value cannot be empty
 --> tests/ui/de/fail/empty_attribute_value.rs:5:17
  |
5 |     #[irc(tag = "")]
  |                 ^^

error: `source` value cannot be empty
  --> tests/ui/de/fail/empty_attribute_value.rs:11:20
   |
11 |     #[irc(source = "")]
   |                    ^^
